infra-manifest/test-circuit-breaker/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: nginx
      version: stable
  template:
    metadata:
      labels:
        service: nginx
        version: stable
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        command:
          - "sh"
          - "-c"
          - |
            echo 'server {
              listen 80;
              location / {
                default_type application/json;
                return 200 "{\"status\": \"ok\"}";
              }
            }' > /etc/nginx/conf.d/default.conf;
            exec nginx -g 'daemon off;'
