infra-manifest/test-circuit-breaker/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    service: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
