infra-manifest/test-circuit-breaker/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-destination-rule
  namespace: default
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
    - name: stable
      labels:
        version: stable
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
        http1MaxPendingRequests: 3
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
